--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>TODO</title>
-    <meta name="description" content="TODO">
+    <title>WhereYouLive</title>
+    <meta name="description" content="WhereYouLive — Helping you make a good choice">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
+    <link href="assets/css/roboto.min.css" rel="stylesheet">
+    <link href="assets/css/material.min.css" rel="stylesheet">
+    <link href="assets/css/ripples.min.css" rel="stylesheet">
+    <link href="assets/css/jquery.nouislider.pips.min.css" ref="stylesheet">
+    <link href="assets/css/jquery.nouislider.min.css" ref="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/chartist.min.css">
   </head>
   <body>
     <!--[if lt IE 8]>
@@ -15,14 +23,27 @@
 
     {{{body}}}
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X', 'auto');ga('send','pageview');
-    </script>
-  </body>
+        <script src="assets/scripts/jquery-1.10.2.min.js"></script>
+        <script src="assets/scripts/bootstrap.min.js"></script>
+        <script src="assets/scripts/jquery.nouislider.all.js"></script>
+        <script src="assets/scripts/ripples.min.js"></script>
+        <script src="assets/scripts/material.min.js"></script>
+        <script src="assets/bundle.js"></script>
+        <script>
+            $(document).ready(function() {
+                // This command is used to initialize some elements and make them work properly
+                $.material.init();
+            });
+        </script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+          (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+          function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+          e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+          e.src='//www.google-analytics.com/analytics.js';
+          r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+          ga('create','UA-XXXXX-X', 'auto');ga('send','pageview');
+        </script>
+    </body>
 </html>
