--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -15,6 +15,13 @@
     <link href="assets/css/jquery.nouislider.pips.min.css" ref="stylesheet">
     <link href="assets/css/jquery.nouislider.min.css" ref="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/chartist.min.css">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+    <style>
+      body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
+        font-family: 'Source Sans Pro', sans-serif !important;
+        font-weight: 400 !important;
+      }
+    </style>
   </head>
   <body>
     <!--[if lt IE 8]>
