--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -28,6 +28,34 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
+    <header class="navbar navbar-bright navbar-fixed-top affix-top" role="banner" data-spy="affix" data-offset-top="80">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" id="brand" href="http://a-new-home.herokuapp.com/" title="WhereYouLive">WhereYouLive</a>
+        </div>
+        <nav class="collapse navbar-collapse" role="navigation" id="navbar">
+            <ul class="nav navbar-nav">
+                <li>
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cities <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="javascript:void(0);">Wellington</a></li>
+                  </ul>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="javascript:void(0);">About us</a></li>
+                <li><a href="http://wellington.startupweekend.com/" id="btnAbout">#SWWLG</a></li>
+            </ul>
+        </nav>
+      </div>
+    </header>
+
     {{{body}}}
 
         <script src="assets/scripts/jquery-1.10.2.min.js"></script>
