Add dummy contact form (getsimpleform is down)

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -9,6 +9,7 @@
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
     <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
     <link href="assets/css/roboto.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
@@ -20,19 +21,8 @@
     <link href="assets/css/animate.css" ref="stylesheet">
     <link href="assets/css/colors.css" ref="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/squad-theme.css">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
-    <style>
-      body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
-        font-family: 'Source Sans Pro', sans-serif !important;
-        font-weight: 400 !important;
-      }
 
-      .intro {
-        background: url(assets/images/home-background.jpg) no-repeat top center;
-        background-size: cover;
-        height: 100vh;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   </head>
   {{!-- Theme from http://bootstrapzero.com/bootstrap-template/squad --}}
   <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -54,20 +44,12 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#intro">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#service">Service</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Example menu</a></li>
-            <li><a href="#">Example menu</a></li>
-            <li><a href="#">Example menu</a></li>
-          </ul>
-        </li>
-      </ul>
+              <ul class="nav navbar-nav">
+                <li class="active"><a href="#intro">Home</a></li>
+                <li><a href="#service">Service</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+              </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -119,7 +101,7 @@
                 <div class="wow fadeInLeft" data-wow-delay="0.2s">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="imgages/icons/service-icon-1.png" alt="" />
+                        <img src="assets/images/icons/service-icon-1.png" alt="" />
                     </div>
                     <div class="service-desc">
                         <h5>Print</h5>
@@ -132,7 +114,7 @@
                 <div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="imgages/icons/service-icon-2.png" alt="" />
+                        <img src="assets/images/icons/service-icon-2.png" alt="" />
                     </div>
                     <div class="service-desc">
                         <h5>Web Design</h5>
@@ -145,7 +127,7 @@
                 <div class="wow fadeInUp" data-wow-delay="0.2s">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="imgages/icons/service-icon-3.png" alt="" />
+                        <img src="assets/images/icons/service-icon-3.png" alt="" />
                     </div>
                     <div class="service-desc">
                         <h5>Photography</h5>
@@ -158,7 +140,7 @@
                 <div class="wow fadeInRight" data-wow-delay="0.2s">
                 <div class="service-box">
                     <div class="service-icon">
-                        <img src="imgages/icons/service-icon-4.png" alt="" />
+                        <img src="assets/images/icons/service-icon-4.png" alt="" />
                     </div>
                     <div class="service-desc">
                         <h5>Cloud System</h5>
@@ -183,7 +165,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
                     <div class="section-heading">
-                    <h2>Get in touch</h2>
+                    <h2>Let's keep in touch</h2>
+                    <div class="lead">We'll keep you informed of new cities and data sources as we add them to the service.</div>
                     <i class="fa fa-2x fa-angle-down"></i>
 
                     </div>
@@ -200,77 +183,22 @@
             </div>
         </div>
     <div class="row">
-        <div class="col-lg-8">
+        <div class="col-lg-12">
             <div class="boxed-grey">
                 <form id="contact-form">
                 <div class="row">
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter name" required="required" />
-                        </div>
-                        <div class="form-group">
-                            <label for="email">
-                                Email Address</label>
-                            <div class="input-group">
-                                <span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span>
-                                </span>
-                                <input type="email" class="form-control" id="email" placeholder="Enter email" required="required" /></div>
-                        </div>
-                        <div class="form-group">
-                            <label for="subject">
-                                Subject</label>
-                            <select id="subject" name="subject" class="form-control" required="required">
-                                <option value="na" selected="">Choose One:</option>
-                                <option value="service">General Customer Service</option>
-                                <option value="suggestions">Suggestions</option>
-                                <option value="product">Product Support</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label for="name">
-                                Message</label>
-                            <textarea name="message" id="message" class="form-control" rows="9" cols="25" required="required"
-                                placeholder="Message"></textarea>
+                    <div class="col-md-12">
+                        <div class="form-control-wrapper">
+                            <input class="form-control empty" type="email">
+                            <div class="floating-label">Your email address</div>
+                            <span class="material-input"></span>
                         </div>
                     </div>
                     <div class="col-md-12">
-                        <button type="submit" class="btn btn-skin pull-right" id="btnContactUs">
-                            Send Message</button>
+                        <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Stay up to date</button>
                     </div>
                 </div>
                 </form>
-            </div>
-        </div>
-
-        <div class="col-lg-4">
-            <div class="widget-contact">
-                <h5>Main Office</h5>
-
-                <address>
-                  <strong>Squas Design, Inc.</strong><br>
-                  Tower 795 Folsom Ave, Beautiful Suite 600<br>
-                  San Francisco, CA 94107<br>
-                  <abbr title="Phone">P:</abbr> (123) 456-7890
-                </address>
-
-                <address>
-                  <strong>Email</strong><br>
-                  <a href="mailto:#">email.name@example.com</a>
-                </address>
-                <address>
-                  <strong>We're on social networks</strong><br>
-                        <ul class="company-social">
-                            <li class="social-facebook"><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                            <li class="social-twitter"><a href="#" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li class="social-dribble"><a href="#" target="_blank"><i class="fa fa-dribbble"></i></a></li>
-                            <li class="social-google"><a href="#" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                        </ul>
-                </address>
-
             </div>
         </div>
     </div>
@@ -290,7 +218,7 @@
                         </a>
                     </div>
                     </div>
-                    <p>&copy;Copyright 2014 - Squad. All rights reserved.</p>
+                    <p>&copy;Copyright 2015 - WhereYouLive. All rights reserved.</p>
                 </div>
             </div>
         </div>
