--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,3 +13,7 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
   top: -11.8px !important;
   font-size: 14.8px !important;
 }
+
+.home-section {
+    min-height: 100vh;
+}
