Updated logo and header text

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -61,8 +61,8 @@
 
         <div class="slogan">
             <img width="128" height="128" src="assets/images/site-logo.png" alt="Logo">
-            <h2>Welcome to <span class="text_color">WhereYouLive</span> </h2>
-            <h4>We are here to help you make a good choice</h4>
+            <h2><span class="text_color">WhereYouLive</span> </h2>
+            <h4>Helping you make a good choice</h4>
         </div>
         <div class="page-scroll">
             <a href="#service" class="btn btn-circle">
