Aesthetic tweaks; colors

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -13,7 +13,7 @@
     <!-- Include roboto.css to use the Roboto web font, material.css to include the theme and ripples.css to style the ripple effect -->
     <link href="assets/css/roboto.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/material.min.css" rel="stylesheet">
+    <link href="assets/css/material.css" rel="stylesheet">
     <link href="assets/css/ripples.min.css" rel="stylesheet">
     <link href="assets/css/jquery.nouislider.pips.min.css" ref="stylesheet">
     <link href="assets/css/jquery.nouislider.min.css" ref="stylesheet">
