--- a/src/assets/css/squad-theme.css
+++ b/src/assets/css/squad-theme.css
@@ -66,7 +66,7 @@ a:focus {
 }
 
 .navbar.top-nav-collapse {
-    background-color: #009688;
+    background-color: #f49167;
 }
 
 @media (min-width: 767px)
