--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>WhereYouLive — Helping you make a good choice</title>
-    <meta name="description" content="WhereYouLive — Helping you make a good choice">
+    <title>WhereYouLive — Informing your next move</title>
+    <meta name="description" content="WhereYouLive — Informing your next move">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -62,7 +62,7 @@
         <div class="slogan">
             <img width="128" height="128" src="assets/images/site-logo.png" alt="Logo">
             <h2><span class="text_color">WhereYouLive</span> </h2>
-            <h4>Helping you make a good choice</h4>
+            <h4>Informing your next move</h4>
         </div>
         <div class="page-scroll">
             <a href="#service" class="btn btn-circle">
@@ -79,9 +79,9 @@
     <!-- /Section: services -->
 
     <!-- Section: contact -->
-    <section id="contact" class="home-section text-center  bg-gray">
+    <section id="contact" class="home-section text-center bg-gray">
         <div class="heading-contact">
-            <div class="container">
+            <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
@@ -96,34 +96,27 @@
             </div>
             </div>
         </div>
-        <div class="container">
-
-        <div class="row">
-            <div class="col-lg-2 col-lg-offset-5">
-                <hr class="marginbot-50">
-            </div>
-        </div>
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="boxed-white">
-                <form id="contact-form">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form-control-wrapper">
-                            <input class="form-control empty" type="email">
-                            <div class="floating-label">Your email address</div>
-                            <span class="material-input"></span>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="boxed-white">
+                        <form id="contact-form">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-control-wrapper">
+                                    <input class="form-control empty" type="email">
+                                    <div class="floating-label">Your email address</div>
+                                    <span class="material-input"></span>
+                                </div>
+                            </div>
+                            <div class="col-md-12">
+                                <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Stay up to date</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-12">
-                        <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Stay up to date</button>
+                        </form>
                     </div>
                 </div>
-                </form>
             </div>
-        </div>
-    </div>
-
         </div>
     </section>
     <!-- /Section: contact -->
@@ -216,7 +209,7 @@
                 <div class="col-md-12 col-lg-12">
                     <div class="wow shake" data-wow-delay="0.4s">
                     <div class="page-scroll marginbot-30">
-                        <a href="#intro" id="totop" class="btn btn-circle">
+                        <a href="#intro" id="totop" class="btn btn-circle btn-dark">
                             <i class="fa fa-angle-double-up animated"></i>
                         </a>
                     </div>
