--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -47,8 +47,8 @@
               <ul class="nav navbar-nav">
                 <li class="active"><a href="#intro">Home</a></li>
                 <li><a href="#service">Service</a></li>
+                <li><a href="#about">Our Team</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#about">About</a></li>
               </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -78,51 +78,8 @@
     </section>
     <!-- /Section: services -->
 
-    <!-- Section: contact -->
-    <section id="contact" class="home-section text-center bg-gray">
-        <div class="heading-contact">
-            <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <div class="wow bounceInDown" data-wow-delay="0.4s">
-                    <div class="section-heading">
-                    <h2>Let's keep in touch</h2>
-                    <div class="lead">We'll keep you informed of new cities and data sources as we add them to the service.</div>
-                    <i class="fa fa-2x fa-angle-down"></i>
-
-                    </div>
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="boxed-white">
-                        <form id="contact-form">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="form-control-wrapper">
-                                    <input class="form-control empty" type="email">
-                                    <div class="floating-label">Your email address</div>
-                                    <span class="material-input"></span>
-                                </div>
-                            </div>
-                            <div class="col-md-12">
-                                <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Stay up to date</button>
-                            </div>
-                        </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- /Section: contact -->
-
     {{!-- section about --}}
-    <section id="about" class="home-section text-center">
+    <section id="about" class="home-section text-center bg-gray">
 
         <div class="heading-about">
             <div class="container">
@@ -130,7 +87,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="wow bounceInDown" data-wow-delay="0.4s">
                     <div class="section-heading">
-                    <h2>Our Services</h2>
+                    <h2>Our Team</h2>
                     <i class="fa fa-2x fa-angle-down"></i>
 
                     </div>
@@ -147,63 +104,60 @@
         </div>
         <div class="row">
             <div class="col-sm-3 col-md-3">
-                <div class="wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <img src="assets/images/icons/service-icon-1.png" alt="" />
-                    </div>
-                    <div class="service-desc">
-                        <h5>Print</h5>
-                        <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-                    </div>
-                </div>
-                </div>
+                <p style="text-align: left;">We are a team of business people, designers, front-end and back-end developers, data-sourcing gurus who are passionate about bringing you the data you need to make the best decision on where to live. We would love to hear from you - feel free to <a href="mailto:whereyouliveapp@gmail.com">drop us a line</a>.</p>
             </div>
             <div class="col-sm-3 col-md-3">
-                <div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <img src="assets/images/icons/service-icon-2.png" alt="" />
-                    </div>
-                    <div class="service-desc">
-                        <h5>Web Design</h5>
-                        <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-sm-3 col-md-3">
-                <div class="wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <img src="assets/images/icons/service-icon-3.png" alt="" />
-                    </div>
-                    <div class="service-desc">
-                        <h5>Photography</h5>
-                        <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-                    </div>
-                </div>
-                </div>
-            </div>
-            <div class="col-sm-3 col-md-3">
-                <div class="wow fadeInRight" data-wow-delay="0.2s">
-                <div class="service-box">
-                    <div class="service-icon">
-                        <img src="assets/images/icons/service-icon-4.png" alt="" />
-                    </div>
-                    <div class="service-desc">
-                        <h5>Cloud System</h5>
-                        <p>Vestibulum tincidunt enim in pharetra malesuada. Duis semper magna metus electram accommodare.</p>
-                    </div>
-                </div>
-                </div>
+                <img src="assets/images/teamphoto.jpg">
             </div>
         </div>
         </div>
     </section>
      {{!-- /section about --}}
 
-    <footer>
+     <!-- Section: contact -->
+     <section id="contact" class="home-section text-center">
+         <div class="heading-contact">
+             <div class="container-fluid">
+             <div class="row">
+                 <div class="col-lg-8 col-lg-offset-2">
+                     <div class="wow bounceInDown" data-wow-delay="0.4s">
+                     <div class="section-heading">
+                     <h2>Let's keep in touch</h2>
+                     <div class="lead">We'll keep you informed of new cities and data sources as we add them to the service.</div>
+                     <i class="fa fa-2x fa-angle-down"></i>
+
+                     </div>
+                     </div>
+                 </div>
+             </div>
+             </div>
+         </div>
+         <div class="container-fluid">
+             <div class="row">
+                 <div class="col-lg-12">
+                     <div class="boxed-white">
+                         <form id="contact-form">
+                         <div class="row">
+                             <div class="col-md-12">
+                                 <div class="form-control-wrapper">
+                                     <input class="form-control empty" type="email">
+                                     <div class="floating-label">Your email address</div>
+                                     <span class="material-input"></span>
+                                 </div>
+                             </div>
+                             <div class="col-md-12">
+                                 <button type="submit" class="btn btn-primary pull-right" id="btnContactUs">Stay up to date</button>
+                             </div>
+                         </div>
+                         </form>
+                     </div>
+                 </div>
+             </div>
+         </div>
+     </section>
+     <!-- /Section: contact -->
+
+    <footer class=" bg-gray">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-lg-12">
