--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -135,7 +135,7 @@
          <div class="container-fluid">
              <div class="row">
                  <div class="col-lg-12">
-                     <div class="boxed-white">
+                     <div class="boxed-grey">
                          <form id="contact-form">
                          <div class="row">
                              <div class="col-md-12">
