--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -24,6 +24,11 @@ body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4 {
     background-color: hsla(18, 87%, 68%, 0.2);
 }
 
+#glorious-hack h1 {
+  margin-bottom: 0px;
+  margin-top: 30px;
+}
+
 .intro h2 {
     font-weight: 900 !important;
     margin-bottom: 15px;
