Add favicons & mobile web app icons

--- a/src/views/layout.hbs
+++ b/src/views/layout.hbs
@@ -23,6 +23,18 @@
     <link rel="stylesheet" type="text/css" href="assets/css/squad-theme.css">
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="WhereYouLive">
+    <meta name="application-name" content="WhereYouLive">
+    <link rel="shortcut icon" href="/assets/favicons/favicon.ico"/>
+    <link rel="apple-touch-icon" href="/assets/favicons/apple-touch-icon-precomposed.png">
+    <link rel="icon" sizes="192x192" href="/assets/favicons/android-chrome-192x192">
+
   </head>
   {{!-- Theme from http://bootstrapzero.com/bootstrap-template/squad --}}
   <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
